# TungstenBeta

./: CMakeLists.txt  main.cpp
TungstenBeta/: CMakeLists.txt  Constant.cpp  Constant.h  ElementaryFunctions.cpp  ElementaryFunctions.h  Expression.h  Methods.cpp  Methods.h  TungstenBeta.cpp  TungstenBeta.h  TungstenBetaGUI.cpp  TungstenBetaGUI.h  Variable.cpp  Variable.h  operators.cpp  operators.h
